[project]
name = "anymodel-rag-connector"
version = "0.1.0"
description = "A flexible, multi-backend Retrieval-Augmented Generation framework"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "streamlit>=1.30.0",
    "langchain-openai>=0.1.0",
    "langchain-community>=0.0.20",
    "langchain-text-splitters>=0.0.1",
    "langchain-core>=0.1.20",
    "faiss-cpu>=1.7.4",
    "tiktoken>=0.5.2",
    "pypdf>=3.17.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.12.0",
    "ruff>=0.1.9",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ['py38']

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true